// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SubscriptionsEpisodeFeed component should render correctly 1`] = `
<styled.div>
  <EpisodesList
    episodes={Array []}
    setCurrentEpisodeConnect={[Function]}
  />
</styled.div>
`;

exports[`Test SubscriptionsEpisodeFeed component should render correctly 2`] = `
<styled.div>
  <LoadingSpinner />
</styled.div>
`;
